--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Depends: R (>= 3.5.1)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Suggests: testthat
 depends:
 	caret,
 	dplyr,
@@ -15,5 +16,6 @@ depends:
   pROC,
   glmnet,
   pROC,
-  recordPlot
+  recordPlot,
+  stringr
 RoxygenNote: 6.1.1
