--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,17 @@
 S3method(plot,ModelComparison)
 S3method(predict,ModelComparison)
 S3method(summary,ModelComparison)
+export("GetModelComparisons()")
+export("ModelComparison()")
+export(BuildModels)
+export(CreateCombinedPlot)
 export(CreateModelComparison)
+export(CreateROCPlot)
 export(GetAccuracy)
-export(GetModelComparisons)
+export(GetBuildFlags)
+export(GetPredType)
+export(GetTrainingInfo)
+export(prepData)
 exportPattern("^[[:alpha:]]+")
 importFrom(Rcpp,evalCpp)
 useDynLib(BestModel)
