--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,6 @@ S3method(predict,Ensemble)
 S3method(predict,ModelComparison)
 S3method(summary,Ensemble)
 S3method(summary,ModelComparison)
-export("GetModelComparisons()")
-export("ModelComparison()")
 export(AverageVote)
 export(BuildModels)
 export(CreateCombinedPlot)
@@ -16,6 +14,7 @@ export(Ensemble)
 export(GetAccuracy)
 export(GetBuildFlags)
 export(GetFactorEqual)
+export(GetModelComparisons)
 export(GetModelWeights)
 export(GetPredType)
 export(GetPredictionsForStacking)
@@ -23,6 +22,7 @@ export(GetTrainingInfo)
 export(GetWeightsFromTestingSet)
 export(MajorityVote)
 export(MajorityWeight)
+export(ModelComparison)
 export(PrepareIris)
 export(PrepareNumericTitanic)
 export(StripPredictions)
