Ensemble fixed for new SVM's

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(GetModelComparisons)
 export(GetModelWeights)
 export(GetPredType)
 export(GetPredictionsForStacking)
+export(GetSVMScale)
 export(GetTrainingInfo)
 export(GetWeightsFromTestingSet)
 export(MajorityVote)
