--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: BestModel
-Title: A package to run and compare standard machine learning models with easy visualization.
+Title: A package to run and compare standard machine learning models with easy visualization
 Version: 0.0.1.0000
 Authors@R: person("Orion", "Weller", email = "first.last@example.com", role = c("aut", "cre"))
 Description: This package allows for the creation of ModelComparison objects. These objects provide an easy way to visualize the metrics between the different models. You can supply the models yourself, or create them in the function.  It also allows for easy Ensembling as well as other helper functionality.
@@ -8,7 +8,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 Suggests: testthat
-depends:
+Imports:
 	caret,
   pROC,
   ggplot2,
