--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,5 @@
 language: R
 cache: packages
 
-r_binary_packages:
-  - devtools
-  - roxygen2
-
 after_script:
-  - Rscript -e 'devtools::install();devtools::test()'
+  - ./travis-tool.sh dump_logs
